fixing checkbox visibility in Firefox and Safari

--- a/blocks/element/__like-button-label/element__like-button-label.css
+++ b/blocks/element/__like-button-label/element__like-button-label.css
@@ -3,6 +3,7 @@
 	cursor: pointer;
 	margin-top: 3px;
 	margin-right: 18px;
+	overflow: hidden;
 }
 
 .element__like-button-label:hover {
