--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -4,6 +4,5 @@
 	border: none;
 	width: 0px;
   height: 0px;
-  overflow: hidden;
   clip: rect(0 0 0 0);
 }
